@@ -1,87 +1,87 @@
 <?php /* $Id$ */ ?>
 <?php
 $name = _("Shadows");
-$description = _("Grey shadows falling to the right and below. Should work against colored and pale backgrounds, including the default gallery color.");
+$description = _("PNG transparent shadows falling to the right and below. Proper transparency, so should work against most backgrounds, except black.");
 
 /* TL Top left */
 
-$imageTL = "pixel_trans.gif";
+$imageTL = "pixel_trans.png";
 $widthTL = 0;
 $heightTL = 0;
 
 /* TT Top */
-$imageTT = "pixel_trans.gif";
+$imageTT = "pixel_trans.png";
 $widthTT = 1;
 $heightTT = 0;
 
 /* TT Top */
-$imageTTL = "pixel_trans.gif";
+$imageTTL = "pixel_trans.png";
 $widthTTL = 1;
 $heightTTL = 0;
 
 /* TT Top */
-$imageTTR = "pixel_trans.gif";
+$imageTTR = "pixel_trans.png";
 $widthTTR = 1;
 $heightTTR = 0;
 
 /* TR Top right */
-$imageTR = "pixel_trans.gif";
+$imageTR = "pixel_trans.png";
 $widthTR = 0;
 $heightTR = 0;
 
 /* RRT Top inline right */
-$imageRRT = "RRT.gif";
-$widthRRT = 10;
-$heightRRT = 20;
+$imageRRT = "RRT.png";
+$widthRRT = 7;
+$heightRRT = 10;
 
 /* RRB Bottom inline right */
-$imageRRB = "RR.gif";
-$widthRRB = 10;
+$imageRRB = "RR.png";
+$widthRRB = 7;
 $heightRRB = 1;
 
 /* LL Left side */
-$imageLL = "pixel_trans.gif";
+$imageLL = "pixel_trans.png";
 $widthLL = 0;
 $heightLL = 1;
 
 /* LL Left side */
-$imageLLT = "pixel_trans.gif";
+$imageLLT = "pixel_trans.png";
 $widthLLT = 0;
 $heightLLT = 1;
 
 /* LL Left side */
-$imageLLB = "pixel_trans.gif";
+$imageLLB = "pixel_trans.png";
 $widthLLB = 0;
 $heightLLB = 1;
 
 
 /* RR Right side */
-$imageRR = "RR.gif";
-$widthRR = 10;
+$imageRR = "RR.png";
+$widthRR = 7;
 $heightRR = 1;
 
 /* BL Bottom left */
-$imageBL = "pixel_trans.gif";
+$imageBL = "pixel_trans.png";
 $widthBL = 0;
 $heightBL = 0;
 
 /* BBL Bottom left */
-$imageBBL = "BBL.gif";
-$widthBBL = 20;
-$heightBBL = 10;
+$imageBBL = "BBL.png";
+$widthBBL = 9;
+$heightBBL = 7;
 
 /* BB Bottom */
-$imageBB = "BB.gif";
+$imageBB = "BB.png";
 $widthBB = 1;
-$heightBB = 10;
+$heightBB = 7;
 
 /* BBR Bottom Right */
-$imageBBR = "BB.gif";
+$imageBBR = "BB.png";
 $widthBBR = 1;
-$heightBBR = 10;
+$heightBBR = 7;
 
 /* BR Bottom Right */
-$imageBR = "BR.gif";
-$widthBR = 10;
-$heightBR = 10;
+$imageBR = "BR.png";
+$widthBR = 7;
+$heightBR = 7;
 ?>
