@@ -1,3 +1,9 @@
+2003-11-22  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.2-cvs-b29
+
+	* Spelling corrections.
+
+	* Improvements to shadows frame. Should this go into 1.4.1?
+
 2003-11-20  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.2-cvs-b28
 
 	* Updated EZ Prints form to new API in view_photo.php.
@@ -308,7 +314,7 @@
 2003-10-21 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b201
 
 	* Fixed bug where ".", ".." and ".users" would display with 
-	  "Attention adminstrator, remove these directories".
+	  "Attention administrator, remove these directories".
 
 	* Added screen shots for all skins.
 
